multiple map markers rendering to map

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <title>Homepage Lite</title>
+
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDArJWIq1HYsQvvuPYwVOV4RNQdkWZk_rw"></script>
   </head>
   <body>
     <div id="root"></div>
